Fix: alignment of keyboard shurtcuts buttons in help menu

--- a/htdocs/css/mympd.css
+++ b/htdocs/css/mympd.css
@@ -359,9 +359,10 @@ div.key {
   border: 1px solid #bbb;
   background-color: #eee;
   border-radius: 2px;
-  width: 20px;
-  height: 20px;
+  width: 2rem;
+  height: 2rem;
   text-align: center;
+  line-height: 2rem;
 }
 
 ol#searchCrumb {
